Realign save buttons in order to match correct positioning in IE

--- a/src/main/webapp/resources/sass/app/components/_buttons.scss
+++ b/src/main/webapp/resources/sass/app/components/_buttons.scss
@@ -378,6 +378,7 @@
 	margin: 10px;
 	max-width: 340px;
 	height: 40px;
+	width: 95%;
 
 	&.centered {
 		margin: 10px auto;
@@ -441,6 +442,10 @@
 	padding-right: 10px;
 	margin-top: 10px;
 	border-bottom: none !important;
+
+	.voteButton {
+		height: auto !important;
+	}
 }
 
 .noButtonsVotePanel {
